// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trigger enables a single day on click 1`] = `
<div>
  <Input
    label="Trigger type"
    onChange={[Function]}
    required={true}
    select={true}
    value={1}
    variant="outlined"
  >
    <WithStyles(MenuItem)
      key="0"
      value={0}
    >
      Periodic
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="1"
      value={1}
    >
      Cron
    </WithStyles(MenuItem)>
  </Input>
  <div>
    <Input
      error={false}
      label="Maximum concurrent runs"
      onChange={[Function]}
      required={true}
      type="number"
      value="10"
      variant="outlined"
    />
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has start date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-21"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has end date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-28"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={true}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Catchup"
      />
      <HelpButton
        helpText={
          <div>
            <p>
              Whether the recurring run should catch up if behind schedule. Defaults to true.
            </p>
            <p>
              For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
            </p>
            <p>
              Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
            </p>
          </div>
        }
      />
    </div>
    <div
      className="flex"
    >
      <span
        className=""
      >
        Run every
      </span>
      <Separator />
      <Input
        disabled={false}
        height={30}
        id="intervalCategory"
        onChange={[Function]}
        required={true}
        select={true}
        value="Week"
        variant="outlined"
        width={95}
      >
        <WithStyles(MenuItem)
          key="0"
          value="Minute"
        >
          Minute
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Hour"
        >
          Hour
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="Day"
        >
          Day
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="Week"
        >
          Week
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="Month"
        >
          Month
        </WithStyles(MenuItem)>
      </Input>
      <div
        className=""
      >
        <span>
          On:
        </span>
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Checkbox)
              checked={false}
              color="primary"
              disabled={false}
              onClick={[Function]}
            />
          }
          label="All"
        />
        <Separator />
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="0"
          onClick={[Function]}
          size="small"
        >
          S
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="1"
          onClick={[Function]}
          size="small"
        >
          M
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="2"
          onClick={[Function]}
          size="small"
        >
          T
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="3"
          onClick={[Function]}
          size="small"
        >
          W
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="4"
          onClick={[Function]}
          size="small"
        >
          T
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="5"
          onClick={[Function]}
          size="small"
        >
          F
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="6"
          onClick={[Function]}
          size="small"
        >
          S
        </WithStyles(Fab)>
      </div>
    </div>
  </div>
  <div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label={
          <span>
            Allow editing cron expression. ( format is specified
             
            <a
              href="https://godoc.org/github.com/robfig/cron#hdr-CRON_Expression_Format"
            >
              here
            </a>
            )
          </span>
        }
      />
    </div>
    <Input
      disabled={true}
      error={false}
      label="cron expression"
      onChange={[Function]}
      value="0 0 0 ? * 0,2,4,5,6"
      variant="outlined"
      width={300}
    />
    <div>
      Note: Start and end dates/times are handled outside of cron.
    </div>
  </div>
</div>
`;

exports[`Trigger renders all week days enabled 1`] = `
<div>
  <Input
    label="Trigger type"
    onChange={[Function]}
    required={true}
    select={true}
    value={1}
    variant="outlined"
  >
    <WithStyles(MenuItem)
      key="0"
      value={0}
    >
      Periodic
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="1"
      value={1}
    >
      Cron
    </WithStyles(MenuItem)>
  </Input>
  <div>
    <Input
      error={false}
      label="Maximum concurrent runs"
      onChange={[Function]}
      required={true}
      type="number"
      value="10"
      variant="outlined"
    />
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has start date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-21"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has end date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-28"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={true}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Catchup"
      />
      <HelpButton
        helpText={
          <div>
            <p>
              Whether the recurring run should catch up if behind schedule. Defaults to true.
            </p>
            <p>
              For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
            </p>
            <p>
              Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
            </p>
          </div>
        }
      />
    </div>
    <div
      className="flex"
    >
      <span
        className=""
      >
        Run every
      </span>
      <Separator />
      <Input
        disabled={false}
        height={30}
        id="intervalCategory"
        onChange={[Function]}
        required={true}
        select={true}
        value="Week"
        variant="outlined"
        width={95}
      >
        <WithStyles(MenuItem)
          key="0"
          value="Minute"
        >
          Minute
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Hour"
        >
          Hour
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="Day"
        >
          Day
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="Week"
        >
          Week
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="Month"
        >
          Month
        </WithStyles(MenuItem)>
      </Input>
      <div
        className=""
      >
        <span>
          On:
        </span>
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Checkbox)
              checked={false}
              color="primary"
              disabled={false}
              onClick={[Function]}
            />
          }
          label="All"
        />
        <Separator />
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="0"
          onClick={[Function]}
          size="small"
        >
          S
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="1"
          onClick={[Function]}
          size="small"
        >
          M
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="2"
          onClick={[Function]}
          size="small"
        >
          T
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="3"
          onClick={[Function]}
          size="small"
        >
          W
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="4"
          onClick={[Function]}
          size="small"
        >
          T
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="5"
          onClick={[Function]}
          size="small"
        >
          F
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="secondary"
          disabled={false}
          key="6"
          onClick={[Function]}
          size="small"
        >
          S
        </WithStyles(Fab)>
      </div>
    </div>
  </div>
  <div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label={
          <span>
            Allow editing cron expression. ( format is specified
             
            <a
              href="https://godoc.org/github.com/robfig/cron#hdr-CRON_Expression_Format"
            >
              here
            </a>
            )
          </span>
        }
      />
    </div>
    <Input
      disabled={true}
      error={false}
      label="cron expression"
      onChange={[Function]}
      value="0 0 0 ? *"
      variant="outlined"
      width={300}
    />
    <div>
      Note: Start and end dates/times are handled outside of cron.
    </div>
  </div>
</div>
`;

exports[`Trigger renders periodic schedule controls for initial render 1`] = `
<div>
  <Input
    label="Trigger type"
    onChange={[Function]}
    required={true}
    select={true}
    value={0}
    variant="outlined"
  >
    <WithStyles(MenuItem)
      key="0"
      value={0}
    >
      Periodic
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="1"
      value={1}
    >
      Cron
    </WithStyles(MenuItem)>
  </Input>
  <div>
    <Input
      error={false}
      label="Maximum concurrent runs"
      onChange={[Function]}
      required={true}
      type="number"
      value="10"
      variant="outlined"
    />
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has start date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-21"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has end date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-28"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={true}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Catchup"
      />
      <HelpButton
        helpText={
          <div>
            <p>
              Whether the recurring run should catch up if behind schedule. Defaults to true.
            </p>
            <p>
              For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
            </p>
            <p>
              Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
            </p>
          </div>
        }
      />
    </div>
    <div
      className="flex"
    >
      <span
        className=""
      >
        Run every
      </span>
      <div
        className="flex"
      >
        <Separator />
        <Input
          error={false}
          height={30}
          onChange={[Function]}
          required={true}
          type="number"
          value={1}
          variant="outlined"
          width={65}
        />
      </div>
      <Separator />
      <Input
        disabled={false}
        height={30}
        id="intervalCategory"
        onChange={[Function]}
        required={true}
        select={true}
        value="Minute"
        variant="outlined"
        width={95}
      >
        <WithStyles(MenuItem)
          key="0"
          value="Minute"
        >
          Minutes
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Hour"
        >
          Hours
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="Day"
        >
          Days
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="Week"
        >
          Weeks
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="Month"
        >
          Months
        </WithStyles(MenuItem)>
      </Input>
    </div>
  </div>
</div>
`;

exports[`Trigger renders periodic schedule controls if the trigger type is CRON 1`] = `
<div>
  <Input
    label="Trigger type"
    onChange={[Function]}
    required={true}
    select={true}
    value={1}
    variant="outlined"
  >
    <WithStyles(MenuItem)
      key="0"
      value={0}
    >
      Periodic
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="1"
      value={1}
    >
      Cron
    </WithStyles(MenuItem)>
  </Input>
  <div>
    <Input
      error={false}
      label="Maximum concurrent runs"
      onChange={[Function]}
      required={true}
      type="number"
      value="10"
      variant="outlined"
    />
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has start date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-21"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has end date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-28"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={true}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Catchup"
      />
      <HelpButton
        helpText={
          <div>
            <p>
              Whether the recurring run should catch up if behind schedule. Defaults to true.
            </p>
            <p>
              For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
            </p>
            <p>
              Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
            </p>
          </div>
        }
      />
    </div>
    <div
      className="flex"
    >
      <span
        className=""
      >
        Run every
      </span>
      <Separator />
      <Input
        disabled={false}
        height={30}
        id="intervalCategory"
        onChange={[Function]}
        required={true}
        select={true}
        value="Minute"
        variant="outlined"
        width={95}
      >
        <WithStyles(MenuItem)
          key="0"
          value="Minute"
        >
          Minute
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Hour"
        >
          Hour
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="Day"
        >
          Day
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="Week"
        >
          Week
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="Month"
        >
          Month
        </WithStyles(MenuItem)>
      </Input>
    </div>
  </div>
  <div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label={
          <span>
            Allow editing cron expression. ( format is specified
             
            <a
              href="https://godoc.org/github.com/robfig/cron#hdr-CRON_Expression_Format"
            >
              here
            </a>
            )
          </span>
        }
      />
    </div>
    <Input
      disabled={true}
      error={false}
      label="cron expression"
      onChange={[Function]}
      value="0 * * * * ?"
      variant="outlined"
      width={300}
    />
    <div>
      Note: Start and end dates/times are handled outside of cron.
    </div>
  </div>
</div>
`;

exports[`Trigger renders week days if the trigger type is CRON and interval is weekly 1`] = `
<div>
  <Input
    label="Trigger type"
    onChange={[Function]}
    required={true}
    select={true}
    value={1}
    variant="outlined"
  >
    <WithStyles(MenuItem)
      key="0"
      value={0}
    >
      Periodic
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="1"
      value={1}
    >
      Cron
    </WithStyles(MenuItem)>
  </Input>
  <div>
    <Input
      error={false}
      label="Maximum concurrent runs"
      onChange={[Function]}
      required={true}
      type="number"
      value="10"
      variant="outlined"
    />
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has start date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-21"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="Start time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        className=""
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Has end date"
      />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End date"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="date"
        value="2018-12-28"
        variant="outlined"
        width={160}
      />
      <Separator />
      <Input
        InputLabelProps={
          Object {
            "classes": Object {
              "outlined": "noMargin",
            },
            "shrink": true,
          }
        }
        label="End time"
        onChange={[Function]}
        style={
          Object {
            "visibility": "hidden",
          }
        }
        type="time"
        value="07:53"
        variant="outlined"
        width={120}
      />
    </div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={true}
            color="primary"
            onClick={[Function]}
          />
        }
        label="Catchup"
      />
      <HelpButton
        helpText={
          <div>
            <p>
              Whether the recurring run should catch up if behind schedule. Defaults to true.
            </p>
            <p>
              For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
            </p>
            <p>
              Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
            </p>
          </div>
        }
      />
    </div>
    <div
      className="flex"
    >
      <span
        className=""
      >
        Run every
      </span>
      <Separator />
      <Input
        disabled={false}
        height={30}
        id="intervalCategory"
        onChange={[Function]}
        required={true}
        select={true}
        value="Week"
        variant="outlined"
        width={95}
      >
        <WithStyles(MenuItem)
          key="0"
          value="Minute"
        >
          Minute
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Hour"
        >
          Hour
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="Day"
        >
          Day
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="Week"
        >
          Week
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="Month"
        >
          Month
        </WithStyles(MenuItem)>
      </Input>
      <div
        className=""
      >
        <span>
          On:
        </span>
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Checkbox)
              checked={true}
              color="primary"
              disabled={false}
              onClick={[Function]}
            />
          }
          label="All"
        />
        <Separator />
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="0"
          onClick={[Function]}
          size="small"
        >
          S
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="1"
          onClick={[Function]}
          size="small"
        >
          M
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="2"
          onClick={[Function]}
          size="small"
        >
          T
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="3"
          onClick={[Function]}
          size="small"
        >
          W
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="4"
          onClick={[Function]}
          size="small"
        >
          T
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="5"
          onClick={[Function]}
          size="small"
        >
          F
        </WithStyles(Fab)>
        <WithStyles(Fab)
          className="marginRight"
          color="primary"
          disabled={false}
          key="6"
          onClick={[Function]}
          size="small"
        >
          S
        </WithStyles(Fab)>
      </div>
    </div>
  </div>
  <div>
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={
          <WithStyles(Checkbox)
            checked={false}
            color="primary"
            onClick={[Function]}
          />
        }
        label={
          <span>
            Allow editing cron expression. ( format is specified
             
            <a
              href="https://godoc.org/github.com/robfig/cron#hdr-CRON_Expression_Format"
            >
              here
            </a>
            )
          </span>
        }
      />
    </div>
    <Input
      disabled={true}
      error={false}
      label="cron expression"
      onChange={[Function]}
      value="0 0 0 ? * *"
      variant="outlined"
      width={300}
    />
    <div>
      Note: Start and end dates/times are handled outside of cron.
    </div>
  </div>
</div>
`;
